# restic-glance-extension

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: config.py  main.py  restic.py  service.py  types.py  widget.py
src/templates/: widget.html
